fix(div): use light gray for divider in dark mode

--- a/core/src/div/div.module.scss
+++ b/core/src/div/div.module.scss
@@ -7,7 +7,7 @@
 		border-color: var(--light-gray-3);
 	}
 	@include dark {
-		border-color: var(--dark-gray-0);
+		border-color: var(--dark-gray-4);
 	}
 }
 
